--- a/freelancer_inicio/index.html
+++ b/freelancer_inicio/index.html
@@ -26,8 +26,8 @@
         <a href="#">Contactos</a>
     </nav>
     </div>
-   <section>
-        <h2 class = "titulo">Micromercado <spam>Esquel</spam></h2>
+   <section class="hero">
+       <div class="contenido-hero">        <h2 class = "titulo">Micromercado <spam>Esquel</spam></h2>
         <p>
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="88" height="88" viewBox="0 0 24 24" stroke-width="1.5" stroke="#FFC107" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -37,7 +37,8 @@
         </p>
 
         <p>Cochabamba, Colcapirhua</p>
-        <a href="#">Contactar</a>
+        <a href="#">Contactar</a></div>
+
    </section>
      <main>
         <h2>Servicios</h2>
